@@ -1,1 +1,1 @@
-Click on the Setup button to install HTMLDOC v1.8.11.
+Click on the Setup button to install HTMLDOC v1.8.12.
